[ALLI-4450] Improve account expiration reminder Swedish message translation.

--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -2,7 +2,7 @@
 
 accept_request_terms_html = "Jag godkänner användarvillkoren"
 Access Restrictions = "Användarrättigheter"
-account_expiration_body = "Hej %%firstname%%! Ditt användarkonto, som innehåller dina favoriter och sparade sökningar, föråldras %%expirationDate%%. Du kan ignorera det här meddelandet, om du inte använder detta konto. I annat fall kan du enkelt förhindra föråldringen genom att logga in med %%loginMethod%% på %%serviceAddress%% på nytt innan ditt konto föråldras."
+account_expiration_body = "Hej %%firstname%%! Ditt användarkonto, med bl.a. dina favoriter och sparade sökningar, föråldras %%expirationDate%%. Du kan ignorera det här meddelandet om du inte använder detta konto. I annat fall kan du enkelt förhindra att kontot raderas genom att logga in med %%loginMethod%% på %%serviceAddress%% på nytt innan ditt konto föråldras."
 account_expiration_login_method_database = "ditt Finna-konto"
 account_expiration_login_method_multiils = "ditt bibliotekskort"
 account_expiration_login_method_shibboleth = "HAKA login"
