Add source_national for emails.

--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -4778,6 +4778,8 @@ source_Museokeskus Vapriikki = "Museokeskus Vapriikki"
 source_Museovirasto = "Museovirasto"
 source_Mäntsälän museotoimi = "Mäntsälän museotoimi"
 source_Naantalin museo = "Naantalin museo"
+# For emails:
+source_national = "finna.fi"
 source_NLF = "Kansalliskirjasto"
 source_NOVIA = "Yrkeshögskolan Novia"
 source_NRL = "Varastokirjasto"
