--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -4273,6 +4273,8 @@ source_Museokeskus Vapriikki = "Museokeskus Vapriikki"
 source_Museovirasto = "Museiverket"
 source_Mäntsälän museotoimi = "Mäntsälä museum"
 source_Naantalin museo = "Nådendals museum"
+# For emails:
+source_national = "finna.fi"
 source_NLF = "Nationalbiblioteket"
 source_NOVIA = "Yrkeshögskolan Novia"
 source_NRL = "Depåbiblioteket"
