Update the survey for February 2018 (#936)

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -236,8 +236,8 @@ finna_material_providers = "Content providers in Finna"
 Finna Password = "Password"
 finna_new_password_instructions_html = ""
 finna rating = "Finna rating"
-finna_survey_title = "Take the Finna survey!"
-finna_survey_text = "Win a Samsung Galaxy Tab S2 9.7"
+finna_survey_title = "Take the survey!"
+finna_survey_text = "Win a Apple iPad 9.7 32 Gt"
 finna_survey_btn_ok = "Start"
 finna_survey_btn_cancel = "No, thank you!"
 First Lyrics = "Text Incipit"
