--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -226,8 +226,8 @@ Finna Password = "Salasana"
 finna_material_providers = "Aineistontarjoajat Finnassa"
 finna_new_password_instructions_html = ""
 finna rating = "Finna-arvio"
-finna_survey_title = "Vastaa kyselyyn Finnasta!"
-finna_survey_text = "Voita Samsung Galaxy Tab S2 9.7"
+finna_survey_title = "Vastaa käyttäjäkyselyyn!"
+finna_survey_text = "Voita Apple iPad 9.7 32 Gt"
 finna_survey_btn_ok = "Avaa kysely"
 finna_survey_btn_cancel = "Ei kiitos!"
 First Lyrics = "Alkusanat"
