--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -226,8 +226,8 @@ Finna Password = "Lösenord"
 finna_material_providers = "Finnas materialkällor"
 finna_new_password_instructions_html = ""
 finna rating = "Finna-recension"
-finna_survey_title = "Svara på enkäten om Finna!"
-finna_survey_text = "Vinn en Samsung Galaxy Tab S2 9.7"
+finna_survey_title = "Svara på användarundersökningen!"
+finna_survey_text = "Vinn en Apple iPad 9.7 32 Gt"
 finna_survey_btn_ok = "Svara"
 finna_survey_btn_cancel = "Nej, tack!"
 First Lyrics = "Textincipit"
