--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -227,7 +227,7 @@ finna_material_providers = "Finnas materialkällor"
 finna_new_password_instructions_html = ""
 finna rating = "Finna-recension"
 finna_survey_title = "Svara på användarundersökningen!"
-finna_survey_text = "Vinn en Apple iPad 9.7 32 Gt"
+finna_survey_text = "Vinn en Apple iPad 9.7 32 GB"
 finna_survey_btn_ok = "Svara"
 finna_survey_btn_cancel = "Nej, tack!"
 First Lyrics = "Textincipit"
