--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -237,7 +237,7 @@ Finna Password = "Password"
 finna_new_password_instructions_html = ""
 finna rating = "Finna rating"
 finna_survey_title = "Take the survey!"
-finna_survey_text = "Win a Apple iPad 9.7 32 Gt"
+finna_survey_text = "Win an Apple iPad 9.7 32 GB"
 finna_survey_btn_ok = "Start"
 finna_survey_btn_cancel = "No, thank you!"
 First Lyrics = "Text Incipit"
