Tweak account expiration reminder message text a bit.

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -2,7 +2,7 @@
 
 accept_request_terms_html = "I agree to the terms and conditions"
 Access Restrictions = "Access Conditions"
-account_expiration_body = "Dear %%firstname%%! Your account, which contains your favourite lists and saved searches, is about to expire at %%expirationDate%%. If you don't use this account, you can ignore this message. Otherwise you can easily prevent the expiration by logging in with %%loginMethod%% to %%serviceAddress%% before the expiration date."
+account_expiration_body = "Dear %%firstname%%! Your account, which contains your favourite lists and saved searches, is about to expire at %%expirationDate%%. You can easily prevent the expiration by logging in with %%loginMethod%% to %%serviceAddress%% before the expiration date. If you don't use this account or use a different login method, you can ignore this message."
 account_expiration_login_method_database = "your Finna ID"
 account_expiration_login_method_multiils = "your library card"
 account_expiration_login_method_shibboleth = "HAKA login"
