Swedish translation fix (#963)

--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -450,7 +450,7 @@ organisation_info_email = "E-post"
 organisation_info_facebook = "Facebook"
 organisation_info_general = "Om oss"
 organisation_info_homepage = "Avdelningens hemsida"
-organisation_info_is_closed = "Stängd"
+organisation_info_is_closed = "Stängt"
 organisation_info_is_open = "Öppet"
 organisation_info_page_finna_link = "Egen Finna-sajt"
 organisation_info_link = "Servicepunkter och öppettider"
