[ALLI-5486] Replace reCaptcha with a custom mechanism.

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -538,6 +538,7 @@ Production Costs = "Production costs"
 profile_instructions = ""
 profile_update_failed = "Your profile could not be updated"
 Projected Publication Date = "Projected Publication Date"
+protected_action_interval_not_passed = "This action can only be performed once every %%interval%% seconds unless you log in."
 Public Libraries = "Public libraries"
 Public List URL = "Public list link"
 Public List Visibility = "Visibility"
