--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -522,6 +522,7 @@ Production Costs = "Tuotantokustannukset"
 profile_instructions = ""
 profile_update_failed = "Käyttäjäprofiilisi päivitys epäonnistui"
 Projected Publication Date = "Arvioitu julkaisuaika"
+protected_action_interval_not_passed = "Kirjautumaton käyttäjä voi suorittaa tämän toiminnon korkeintaan %%interval%% sekunnin välein."
 Public Libraries = "Yleiset kirjastot"
 Public List URL = "Listan julkinen linkki"
 Public List Visibility = "Näkyvyys"
