--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -521,6 +521,7 @@ Production Costs = "Produktionskostnader"
 profile_instructions = ""
 profile_update_failed = "Din användarprofil kunde inte uppdateras"
 Projected Publication Date = "Beräknat utgivningsdatum"
+protected_action_interval_not_passed = "Åtgärden kan utföras bara en gång per %%interval%% sekunder om du inte loggar in."
 Public Libraries = "Allmänna bibliotek"
 Public List URL = "Offentlig länk till lista"
 Public List Visibility = "Synlighet"
