Translations for Satakirjastot (#1024)

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -3862,6 +3862,69 @@ format_WorkOfArt/Textile = "Textile"
 2/Piki/9/904/ = "Sääksmäki Library"
 2/Piki/9/906/ = "Valkeakoski Upper Secondary School Library"
 
+; Satakirjastot
+0/Satakirjastot/ = "Satakirjastot Libraries"
+1/Satakirjastot/1/ = Pori
+2/Satakirjastot/1/001/ = Pori Main Library
+2/Satakirjastot/1/002/ = Pori Mobile Library Collection
+2/Satakirjastot/1/003/ = Central Hospital Library
+2/Satakirjastot/1/004/ = Ahlainen Library
+2/Satakirjastot/1/005/ = Käppärä Library
+2/Satakirjastot/1/006/ = Pihlava Library
+2/Satakirjastot/1/007/ = Reposaari Library
+2/Satakirjastot/1/008/ = Ruosniemi Library
+2/Satakirjastot/1/009/ = Sampola Library
+2/Satakirjastot/1/010/ = Lavia Library
+2/Satakirjastot/1/011/ = Nakkila Library
+2/Satakirjastot/1/012/ = Noormarkku Library
+2/Satakirjastot/1/013/ = Puuvilla Library
+1/Satakirjastot/3/ = Rauma
+2/Satakirjastot/3/030/ = Rauma Main Library
+2/Satakirjastot/3/031/ = Rauma Mobile Library Collection
+2/Satakirjastot/3/032/ = Kourujärvi Library
+2/Satakirjastot/3/033/ = Pyynpää Library
+2/Satakirjastot/3/034/ = Kodisjoki Library
+2/Satakirjastot/3/035/ = Lappi Library
+1/Satakirjastot/4/ = Karvia
+2/Satakirjastot/4/060/ = Karvia Libkary
+1/Satakirjastot/5/ = Honkajoki
+2/Satakirjastot/5/070/ = Honkajoki Library
+1/Satakirjastot/6/ = Jämijärvi
+2/Satakirjastot/6/090/ = Jämijärvi Library
+1/Satakirjastot/7/ = Harjavalta
+2/Satakirjastot/7/100/ = Harjavalta Library
+1/Satakirjastot/8/ = Kokemäki
+2/Satakirjastot/8/110/ = Kokemäki Library
+2/Satakirjastot/8/111/ = Kauvatsa Library
+1/Satakirjastot/9/ = Eura
+2/Satakirjastot/9/120/ = Eura Main Library
+2/Satakirjastot/9/121/ = Honkilahti Library
+2/Satakirjastot/9/122/ = Hinnerjoki Library
+2/Satakirjastot/9/123/ = Kiukainen Library
+2/Satakirjastot/9/124/ = Panelia Library
+1/Satakirjastot/10/ = Huittinen
+2/Satakirjastot/10/130/ = Huittinen Main Library
+2/Satakirjastot/10/131/ = Vampula Library
+1/Satakirjastot/11/ = Ulvila
+2/Satakirjastot/11/140/ = Ulvila Main Library
+2/Satakirjastot/11/141/ = Kaasmarkku Library
+2/Satakirjastot/11/142/ = Kullaa Library
+1/Satakirjastot/12/ = Pomarkku
+2/Satakirjastot/12/150/ = Pomarkku Library
+1/Satakirjastot/13/ = Siikainen
+2/Satakirjastot/13/160/ = Siikainen Library
+1/Satakirjastot/14/ = Merikarvia
+2/Satakirjastot/14/170/ = Merikarvia Library
+1/Satakirjastot/15/ = Kankaanpää
+2/Satakirjastot/15/180/ = Kankaanpää Library
+1/Satakirjastot/16/ = Säkylä
+2/Satakirjastot/16/190/ = Säkylä Library
+2/Satakirjastot/16/191/ = Köyliö Library
+1/Satakirjastot/17/ = Eurajoki
+2/Satakirjastot/17/200/ = Eurajoki Main Library
+2/Satakirjastot/17/201/ = Eurajoki Mobile Library Collection
+2/Satakirjastot/17/202/ = Luvia Library
+
 ; Rutakko
 0/Rutakko/ = "Rutakko Libraries"
 1/Rutakko/1/ = Iisalmi
@@ -5114,6 +5177,7 @@ source_SAMK = "Satakunta University of Applied Sciences"
 source_SEAMK = "SeAMK Korkeakoulukirjasto"
 source_SHH = "Svenska handelshögskolan"
 source_Salon historiallinen museo = "Salon historiallinen museo"
+source_Satakirjastot = "Satakirjastot Libraries"
 source_Satakunnan Museo = "Satakunta Museum"
 source_SIIDA = "Sámi Museum Siida"
 source_siirtolaisuusinstituutti = "Migration Institute of Finland"
@@ -5171,7 +5235,7 @@ source_oiva = "Oiva Libraries"
 source_outi = "OUTI Libraries"
 source_piki = "PIKI Libraries"
 source_rutakko = "Rutakko Libraries"
-source_satakirjastot = "Sata Libraries"
+source_satakirjastot = "Satakirjastot Libraries"
 source_seitti = "Seitti"
 source_somero = "Somero City Library"
 source_sotkamo = "Sotkamo Public Library"
