--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -3712,6 +3712,69 @@ format_WorkOfArt/Textile = "Tekstiili"
 2/Rutakko/21/801/ = Tervon kunnankirjasto
 2/Rutakko/21/802/ = Tervon vanhainkodin lainausasema
 
+; Satakirjastot
+0/Satakirjastot/ = "Satakirjastot"
+1/Satakirjastot/1/ = Pori
+2/Satakirjastot/1/001/ = Porin pääkirjasto
+2/Satakirjastot/1/002/ = Porin kirjastoauto
+2/Satakirjastot/1/003/ = Keskussairaalan kirjasto
+2/Satakirjastot/1/004/ = Ahlaisten kirjasto
+2/Satakirjastot/1/005/ = Käppärän kirjasto
+2/Satakirjastot/1/006/ = Pihlavan kirjasto
+2/Satakirjastot/1/007/ = Reposaaren kirjasto
+2/Satakirjastot/1/008/ = Ruosniemen kirjasto
+2/Satakirjastot/1/009/ = Sampolan kirjasto
+2/Satakirjastot/1/010/ = Lavian kirjasto
+2/Satakirjastot/1/011/ = Nakkilan kirjasto
+2/Satakirjastot/1/012/ = Noormarkun kirjasto
+2/Satakirjastot/1/013/ = Puuvillan kirjasto
+1/Satakirjastot/3/ = Rauma
+2/Satakirjastot/3/030/ = Rauman pääkirjasto
+2/Satakirjastot/3/031/ = Rauman kirjastoauto
+2/Satakirjastot/3/032/ = Kourujärven kirjasto
+2/Satakirjastot/3/033/ = Pyynpään kirjasto
+2/Satakirjastot/3/034/ = Kodisjoen kirjasto
+2/Satakirjastot/3/035/ = Lapin kirjasto
+1/Satakirjastot/4/ = Karvia
+2/Satakirjastot/4/060/ = Karvian kirjasto
+1/Satakirjastot/5/ = Honkajoki
+2/Satakirjastot/5/070/ = Honkajoen kirjasto
+1/Satakirjastot/6/ = Jämijärvi
+2/Satakirjastot/6/090/ = Jämijärven kirjasto
+1/Satakirjastot/7/ = Harjavalta
+2/Satakirjastot/7/100/ = Harjavallan kirjasto
+1/Satakirjastot/8/ = Kokemäki
+2/Satakirjastot/8/110/ = Kokemäen kirjasto
+2/Satakirjastot/8/111/ = Kauvatsan kirjasto
+1/Satakirjastot/9/ = Eura
+2/Satakirjastot/9/120/ = Euran pääkirjasto
+2/Satakirjastot/9/121/ = Honkilahden kirjasto
+2/Satakirjastot/9/122/ = Hinnerjoen kirjasto
+2/Satakirjastot/9/123/ = Kiukaisten kirjasto
+2/Satakirjastot/9/124/ = Panelian kirjasto
+1/Satakirjastot/10/ = Huittinen
+2/Satakirjastot/10/130/ = Huittisten pääkirjasto
+2/Satakirjastot/10/131/ = Vampulan kirjasto
+1/Satakirjastot/11/ = Ulvila
+2/Satakirjastot/11/140/ = Ulvilan pääkirjasto
+2/Satakirjastot/11/141/ = Kaasmarkun kirjasto
+2/Satakirjastot/11/142/ = Kullaan kirjasto
+1/Satakirjastot/12/ = Pomarkku
+2/Satakirjastot/12/150/ = Pomarkun kirjasto
+1/Satakirjastot/13/ = Siikainen
+2/Satakirjastot/13/160/ = Siikaisten kirjasto
+1/Satakirjastot/14/ = Merikarvia
+2/Satakirjastot/14/170/ = Merikarvian kirjasto
+1/Satakirjastot/15/ = Kankaanpää
+2/Satakirjastot/15/180/ = Kankaanpään kirjasto
+1/Satakirjastot/16/ = Säkylä
+2/Satakirjastot/16/190/ = Säkylän pääkirjasto
+2/Satakirjastot/16/191/ = Köyliön kirjasto
+1/Satakirjastot/17/ = Eurajoki
+2/Satakirjastot/17/200/ = Eurajoen pääkirjasto
+2/Satakirjastot/17/201/ = Eurajoen kirjastoauto
+2/Satakirjastot/17/202/ = Luvian kirjasto
+
 ; Seitti
 0/Seitti/ = "Seitti"
 1/Seitti/1/ = Seinäjoki
@@ -4929,6 +4992,7 @@ source_Päivälehden museo = "Päivälehden museo"
 source_Pöytyän Kotiseutuyhdistys ry = "Pöytyän Kotiseutuyhdistys ry"
 source_Riuttalan talonpoikaiskulttuurin suojelusäätiö = "Riuttalan talonpoikaiskulttuurin suojelusäätiö"
 source_SAMK = "Satakunnan ammattikorkeakoulu"
+source_Satakirjastot = "Satakirjastot"
 source_SEAMK = "SeAMK Korkeakoulukirjasto"
 source_SHH = "Svenska handelshögskolan"
 source_Salon historiallinen museo = "Salon historiallinen museo"
