--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -3213,6 +3213,69 @@ format_WorkOfArt/Textile = "Textil"
 2/Rutakko/21/801/ = Tervo huvudbibliotek
 2/Rutakko/21/802/ = Tervo ålderdomshem
 
+; Satakirjastot
+0/Satakirjastot/ = "Satakirjastot biblioteken"
+1/Satakirjastot/1/ = Björneborg
+2/Satakirjastot/1/001/ = Björneborg huvudbibliotek
+2/Satakirjastot/1/002/ = Björneborg bokbussens samling
+2/Satakirjastot/1/003/ = Sjukhus bibliotek
+2/Satakirjastot/1/004/ = Vittisbofjärd bibliotek
+2/Satakirjastot/1/005/ = Käppärä bibliotek
+2/Satakirjastot/1/006/ = Svinhamn bibliotek
+2/Satakirjastot/1/007/ = Räfsö bibliotek
+2/Satakirjastot/1/008/ = Rosnäs bibliotek
+2/Satakirjastot/1/009/ = Fäviken bibliotek
+2/Satakirjastot/1/010/ = Lavia bibliotek
+2/Satakirjastot/1/011/ = Nakkila bibliotek
+2/Satakirjastot/1/012/ = Norrmark bibliotek
+2/Satakirjastot/1/013/ = Puuvilla bibliotek
+1/Satakirjastot/3/ = Raumo
+2/Satakirjastot/3/030/ = Raumo huvudbibliotek
+2/Satakirjastot/3/031/ = Raumo bokbussens samling
+2/Satakirjastot/3/032/ = Kourujärvi bibliotek
+2/Satakirjastot/3/033/ = Pyynpää bibliotek
+2/Satakirjastot/3/034/ = Kodisjoki bibliotek
+2/Satakirjastot/3/035/ = Lappi bibliotek
+1/Satakirjastot/4/ = Karvia
+2/Satakirjastot/4/060/ = Karvia bibliotek
+1/Satakirjastot/5/ = Honkajoki
+2/Satakirjastot/5/070/ = Honkilax bibliotek
+1/Satakirjastot/6/ = Jämijärvi
+2/Satakirjastot/6/090/ = Jämijärvi bibliotek
+1/Satakirjastot/7/ = Harjavalta
+2/Satakirjastot/7/100/ = Harjavalta bibliotek
+1/Satakirjastot/8/ = Kumo
+2/Satakirjastot/8/110/ = Kumo bibliotek
+2/Satakirjastot/8/111/ = Kauvatsa bibliotek
+1/Satakirjastot/9/ = Eura
+2/Satakirjastot/9/120/ = Eura huvudbibliotek
+2/Satakirjastot/9/121/ = Honkilax bibliotek
+2/Satakirjastot/9/122/ = Hinnerjoki bibliotek
+2/Satakirjastot/9/123/ = Kiukais bibliotek
+2/Satakirjastot/9/124/ = Panelia bibliotek
+1/Satakirjastot/10/ = Vittis
+2/Satakirjastot/10/130/ = Vittis huvudbibliotek
+2/Satakirjastot/10/131/ = Vampula bibliotek
+1/Satakirjastot/11/ = Ulvsby
+2/Satakirjastot/11/140/ = Ulvsby huvudbibliotek
+2/Satakirjastot/11/141/ = Karlsmark bibliotek
+2/Satakirjastot/11/142/ = Kulla bibliotek
+1/Satakirjastot/12/ = Påmark
+2/Satakirjastot/12/150/ = Påmark bibliotek
+1/Satakirjastot/13/ = Siikais
+2/Satakirjastot/13/160/ = Siikais bibliotek
+1/Satakirjastot/14/ = Sastmola
+2/Satakirjastot/14/170/ = Sastmola bibliotek
+1/Satakirjastot/15/ = Kankaanpää
+2/Satakirjastot/15/180/ = Kankaanpää bibliotek
+1/Satakirjastot/16/ = Säkylä
+2/Satakirjastot/16/190/ = Säkylä bibliotek
+2/Satakirjastot/16/191/ = Kjulo bibliotek
+1/Satakirjastot/17/ = Euraåminne
+2/Satakirjastot/17/200/ = Euraåminne huvudbibliotek
+2/Satakirjastot/17/201/ = Euraåminne bokbussens samling
+2/Satakirjastot/17/202/ = Luvia bibliotek
+
 ; Seitti
 0/Seitti/ = "Seitti"
 1/Seitti/1/ = Seinäjoki
@@ -4428,6 +4491,7 @@ source_SAMK = "SAMK"
 source_SEAMK = "SeAMK Korkeakoulukirjasto"
 source_SHH = "Svenska handelshögskolan"
 source_Salon historiallinen museo = "Salon historiallinen museo"
+source_Satakirjastot = "Satakirjastot biblioteken"
 source_Satakunnan Museo = "Satakunta Museum"
 source_SIIDA = "Samemuseum Siida"
 source_siirtolaisuusinstituutti = "Migrationsinstitutet"
@@ -4485,7 +4549,7 @@ source_oiva = "Oiva-biblioteken"
 source_outi = "OUTI-biblioteken"
 source_piki = "PIKI-biblioteken"
 source_rutakko = "Rutakko-biblioteken"
-source_satakirjastot = "Sata-biblioteken"
+source_satakirjastot = "Satakirjastot biblioteken"
 source_seitti = "Seitti"
 source_somero = "Somero stadsbibliotek"
 source_sotkamo = "Sotkamo kommunbibliotek"
