--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -3856,14 +3856,14 @@ format_WorkOfArt/Textile = "Textil"
 
 ; Masto - PHKK
 0/PHKK/ = Lahden ammattikorkeakoulu
-1/PHKK/PHFA/ = FellmanniCampus
+1/PHKK/PHFA/ = Industria
 1/PHKK/PHPA/ = Tietokeskus Kampus
 1/PHKK/DIAL/ = Diakonian instituutin tietokeskus
 1/PHKK/PHST/ = Korkeakoulukirjasto Hoitaja
 1/PHKK/PHSO/ = Tietokeskus Vipunen
 1/PHKK/PHOT/ = Tietokeskus Orimattila
 1/PHKK/PHNT/ = Tietokeskus Nastola
-1/PHKK/PHYK/ = Korkeakoulukirjasto Niemi
+1/PHKK/PHYK/ = Scientia
 1/PHKK/PHHE/ = Tietokeskus Heinola
 1/PHKK/EKIR/ = e-kirjat
 1/PHKK/9999/ = Muu
