Tune authority infobox layout.

--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -46,6 +46,8 @@ Archives = Arkistot
 Aspect Ratio = "Kuvasuhde"
 Assistants = "Avustajat"
 authentication_error_invalid_attributes = "Käyttäjätunnuksellasi ei ole käyttöoikeutta palveluun. Sisäänkirjautuminen epäonnistui."
+authority_hide_info = "Sulje info"
+authority_show_info = "Info"
 authorize_user_notification = "Voit saada enemmän hakutuloksia kirjautumalla korkeakoulun tunnuksilla."
 autocomplete_handler_author = "Hae tekijöistä"
 autocomplete_handler_title = "Hae otsikoista"
