Archive roles on record page.

--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -38,6 +38,9 @@ alert_email_address = "Uutuusvahtien tulokset lähetetään sähköpostiosoittee
 All Favourites = "Kaikki suosikit"
 All Fields = "Kaikki osumat"
 Amount of Viewers = "Katsojia"
+arc_role_http://www.rdaregistry.info/Elements/u/P60434 = "Arc role 1"
+arc_role_http://www.rdaregistry.info/Elements/u/P60444 = "Arc role 2"
+arc_role_http://www.rdaregistry.info/Elements/u/P60672 = "Arc role 3"
 Archive = "Kuuluu arkistoon"
 Archive Origination = "Arkistonmuodostaja"
 Archive Repository = ""
