--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -120,6 +120,44 @@ choose_from_list = "Valitse listalta"
 Citation = "Viitetiedot"
 Cite this = "Viitetiedot"
 Classification = "Luokitus"
+
+CreatorRoles::art = "Kuvataiteilija"
+CreatorRoles::aut = "Kirjoittaja"
+CreatorRoles::cmp = "Säveltäjä"
+CreatorRoles::col = "Kerääjä"
+CreatorRoles::ctg = "Kartantekijä"
+CreatorRoles::drm = "Piirtäjä"
+CreatorRoles::drt = "Ohjaaja"
+CreatorRoles::ive = "Haastateltava"
+CreatorRoles::ivr = "Haastattelija"
+CreatorRoles::pbl = "Julkaisija"
+CreatorRoles::pht = "Kuvaaja"
+CreatorRoles::pht = "Valokuvaaja"
+CreatorRoles::pro = "Tuottaja"
+CreatorRoles::rcd = "Äänittäjä"
+CreatorRoles::spk = "Puhuja"
+CreatorRoles::xxx = "Arkistonmuodostaja"
+CreatorRoles::xxx = "Esittelijä"
+CreatorRoles::xxx = "Esittäjä"
+CreatorRoles::xxx = "Hyväksyjä"
+CreatorRoles::xxx = "Informantti"
+CreatorRoles::xxx = "Isäntäorganisaatio"
+CreatorRoles::xxx = "Jäljentäjä"
+CreatorRoles::xxx = "Keruun järjestäjä"
+CreatorRoles::xxx = "Kokoelmanmuodostaja"
+CreatorRoles::xxx = "Laatija"
+CreatorRoles::xxx = "Luovuttaja"
+CreatorRoles::xxx = "Lähettäjä"
+CreatorRoles::xxx = "Määrittelemätön"
+CreatorRoles::xxx = "Ratkaisija"
+CreatorRoles::xxx = "Sanoittaja"
+CreatorRoles::xxx = "Sovittaja"
+CreatorRoles::xxx = "Tekijä"
+CreatorRoles::xxx = "Toimeksiantaja"
+CreatorRoles::xxx = "Toimittaja"
+CreatorRoles::xxx = "Valmistelija"
+CreatorRoles::xxx = "Vastaanottaja"
+
 Other Classification = "Muu luokitus"
 Clear Selections = "Tyhjennä rajaukset"
 closest_due_date = "Lähin eräpäivä %%date%%"
@@ -554,6 +592,10 @@ recovery_email_subject = "Finna-tunnuksen salasanan vaihto"
 recovery_help_html = ""
 recovery_title = "Salasana unohtunut"
 Registering Payment = "Maksua käsitellään"
+Related Items-parents = "Sisältyy"
+Related Items-children = "Sisältää"
+Related Items-continued-from = "On jatkoa"
+Related Items-other = "Katso myös"
 Remove filter = "Poista rajaus"
 Remove filters = "Poista rajaukset"
 Remove from Book Bag = "Poista korista"
