--- a/local/languages/finna/CreatorRoles/fi.ini
+++ b/local/languages/finna/CreatorRoles/fi.ini
@@ -5,7 +5,7 @@ http://rdaregistry.info/Elements/e/P20047 = "Haastateltava"
 http://rdaregistry.info/Elements/e/P20032 = "Haastattelija"
 http://rdaregistry.info/Elements/e/Pxx = "Hyväksyjä"
 http://rdaregistry.info/Elements/e/Pxx = "Informantti"
-http://rdaregistry.info/Elements/e/Pxx = "Isäntäorganisaatio"
+http://rdaregistry.info/Elements/e/P10007 = "Isäntäorganisaatio"
 http://rdaregistry.info/Elements/w/P10046 = "Julkaisija" 
 http://rdaregistry.info/Elements/e/Pxx = "Jäljentäjä"
 http://rdaregistry.info/Elements/e/P20042 = "Kartantekijä"
@@ -14,14 +14,14 @@ http://rdaregistry.info/Elements/e/Pxx = "Kerääjä"
 http://rdaregistry.info/Elements/w/P10061 = "Kirjoittaja"
 http://rdaregistry.info/Elements/a/P50045 = "Kokoelman muodostaja"
 http://rdaregistry.info/Elements/a/P50190 = "Kuvaaja"
-http://rdaregistry.info/Elements/e/Pxx = "Kuvataiteilija"
-http://rdaregistry.info/Elements/e/Pxx = "Laatija"
+http://rdaregistry.info/Elements/e/P10058 = "Kuvataiteilija"
+http://rdaregistry.info/Elements/e/P20058 = "Laatija"
 http://rdaregistry.info/Elements/e/Pxx = "Luovuttaja"
 http://rdaregistry.info/Elements/e/Pxx = "Lähettäjä"
 http://rdaregistry.info/Elements/w/P10066 = "Ohjaaja"
-http://rdaregistry.info/Elements/e/Pxx = "Piirtäjä"
-http://rdaregistry.info/Elements/e/Pxx = "Puhuja"
+http://rdaregistry.info/Elements/e/P20033 = "Piirtäjä"
+http://rdaregistry.info/Elements/e/P20024 = "Puhuja"
 http://rdaregistry.info/Elements/e/Pxx = "Ratkaisija"
-http://rdaregistry.info/Elements/e/Pxx = "Sanoittaja"
-http://rdaregistry.info/Elements/e/Pxx = "Sovittaja"
+http://rdaregistry.info/Elements/e/P10204 = "Sanoittaja"
+http://rdaregistry.info/Elements/e/P20029 = "Sovittaja"
 http://www.rdaregistry.info/Elements/u/P60672 = "testi"
